<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_lbl_titulo"
            android:textSize="20sp"
            android:textColor="@color/cardview_dark_background"
            android:gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/dni"/>
            <EditText
                android:id="@+id/reg_txt_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_txt_dni"
                android:inputType="number"
                android:maxLength="8"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/nombre"/>
            <EditText
                android:id="@+id/reg_txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_txt_nombre"
                android:inputType="text"
                android:maxLength="50"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/apellidos"/>
            <EditText
                android:id="@+id/reg_txt_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_txt_apellidos"
                android:inputType="text"
                android:maxLength="50"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/fecha"/>
            <EditText
                android:id="@+id/reg_txt_fecha_nac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_txt_fecha_nac"
                android:focusable="false"
                android:clickable="true"
                android:inputType="date"
                android:maxLength="30"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/sexo"/>

            <RadioGroup
                android:id="@+id/reg_rg_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/reg_rb_sin_definir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_rb_sin_definir"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/reg_rb_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_rb_masculino"/>
                <RadioButton
                    android:id="@+id/reg_rb_femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_rb_femenino"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/email"/>
            <EditText
                android:id="@+id/reg_txt_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_txt_correo"
                android:inputType="textEmailAddress"
                android:maxLength="100"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/distrito"/>
            <Spinner
                android:id="@+id/reg_sp_distritos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/telefono"/>
            <EditText
                android:id="@+id/reg_txt_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_txt_telefono"
                android:inputType="number"
                android:maxLength="9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/distrito"/>
            <EditText
                android:id="@+id/reg_txt_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_txt_direccion"
                android:inputType="text"
                android:maxLength="100"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/clave"/>
            <EditText
                android:id="@+id/reg_txt_clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_txt_clave"
                android:inputType="textPassword"
                android:maxLength="128"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/clave"/>
            <EditText
                android:id="@+id/reg_txt_confirmar_clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_txt_confirmar_clave"
                android:inputType="textPassword"
                android:maxLength="128"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/reg_chk_terminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/reg_chk_terminos"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <Button
                android:id="@+id/reg_btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_btn_registrar"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:enabled="false"
                android:layout_weight="1"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/reg_btn_cancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_btn_cancelar"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:textAllCaps="false"/>
        </LinearLayout>







    </LinearLayout>



</androidx.core.widget.NestedScrollView>